--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@vue/runtime-core": "^3.2.37",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "vue": "^3.0.11",
