--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vue/runtime-core": "^3.2.37",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "jquery.easing": "^1.4.1",
     "vue": "^3.0.11",
     "vue-router": "^4.0.16"
   }
