--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.6.0",
     "jquery.easing": "^1.4.1",
     "vue": "^3.0.11",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "datatables.net-bs4": "1.10.24"
   }
 }
