--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "@vue/runtime-core": "^3.2.37",
     "bootstrap": "^5.1.3",
+    "datatables.net-bs4": "1.10.24",
     "jquery": "^3.6.0",
     "jquery.easing": "^1.4.1",
     "vue": "^3.0.11",
-    "vue-router": "^4.0.16",
-    "datatables.net-bs4": "1.10.24"
+    "vue-plugin-load-script": "^2.1.1",
+    "vue-router": "^4.0.16"
   }
 }
